# p_63_branch_monkey

./: .gitignore  LICENSE  QUICKSTART.md  README.md  STATUS.md  VISUALIZATION.md  after_merge.txt  demo_graph.py  demo_horizontal.py  example_usage.sh  fastapi_server.py  mock_server.py  package.json  pyproject.toml  run_web.py  test.txt  test_direct.py  test_simple_web.py  test_tui.py  test_web.py
.branch_monkey/: .gitignore
.claude/: settings.json
.github/: FUNDING.yml
branch_monkey/: __init__.py  api.py  cli.py  mcp_server.py
branch_monkey/core/: __init__.py  architecture_schema.py  checkpoint.py  context.py  experiment.py  graph.py  graph_horizontal.py  history.py  prompts.py
branch_monkey/hooks/: __init__.py  claude_code_hook.py
branch_monkey/tui/: __init__.py  app.py
branch_monkey/tui/screens/: __init__.py  checkpoints.py  experiments.py  graph.py  graph_horizontal.py  timeline.py
branch_monkey/tui/widgets/: __init__.py
branch_monkey/web/: __init__.py  app.py  simple_app.py
branch_monkey/web/templates/: index.html
example_project/: README.md
example_project/.branch_monkey/: data.db  tasks.json
example_project/src/: app.py  auth.py  config.py  models.py
example_project/src/api/: tasks.py
example_project/tests/: test_tasks.py
frontend/: DEPLOYMENT.md  index.html  package-lock.json  package.json  vite.config.js  wrangler.toml
frontend/functions/api/: [[path]].js
frontend/public/demo-data/: commit-tree.json  context-history.json  prompt-logs.json  repo-info.json  tasks.json  versions.json
frontend/src/: App.svelte
frontend/src/lib/components/: ArchitectureLibrary.svelte  ArchitectureNode.svelte  ArchitecturePage.svelte  BranchesList.svelte  BuildingNode.svelte  (+32 more)
scripts/: create_sample_data.py  migrate_to_local_db.py  save_claude_prompt.py
(+4 files in other folders)
